# dectalk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
src/: dectalk.rs  main.rs  mute_manager.rs  prefix_manager.rs  utils.rs  voice_manager.rs
