[package]
name = "dectalk"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
hound = "3.5.1"
log = "0.4.26"
once_cell = "1.21.1"
poise = "0.6.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["temp_cache"] }
songbird = "0.5.0"
symphonia = { version = "0.5.4", features = ["wav"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
uuid = "1.16.0"
