[package]
name = "dectalk"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.9"
futures = "0.3.32"
hound = "3.5.1"
log = "0.4.29"
poise = "0.6.1"
regex = "1.12.3"
# songbird = "0.5.0"
songbird = { git = "https://github.com/beerpsi-forks/songbird.git", branch = "davey" }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["temp_cache"] }

symphonia = { version = "0.5.5", features = ["wav"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
